# derisk_skills

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
agents/openrca/: open_rca.json
cli/: __init__.py
docs/: SKILL_DEVELOPMENT.md
examples/n8n-workflows/: README.md
examples/playbooks/: README.md
examples/risk-scenarios/: README.md
skills/incident-response/: README.md
skills/monitoring-alerting/: README.md
skills/n8n-openderisk-integration/: README.md
skills/n8n-risk-workflows/: README.md
skills/remediation-recovery/: README.md
skills/risk-assessment/: EXAMPLES.md  README.md  SKILL.md
skills/root-cause-analysis/: README.md  SKILL.md
src/agents/openrca/: README.md
src/cli/: main.py
src/derisk_skills/: config.py
src/derisk_skills/cli/: main.py
src/skills/: README.md  __init__.py
