[project]
name = "derisk-skills"
version = "0.1.0"
description = "DeRisk Skill CLI Module - Setup tool for OpenDerisk"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "csunny", email = "cfqsunny@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
derisk-cli = "derisk_skills.cli.__init__:main"
