[project]
name = "derisk-skills"
version = "0.1.0"
description = "CLI tool for managing OpenDeRisk Skills"
readme = "README.md"
authors = [{name = "csunny", email = "csunny@gmail.com"}]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.build-backend]
module-name = "derisk_skills"
source-exclude = ["tests/**/*"]

[project.scripts]
derisk-skills = "derisk_skills.cli:main"
