[project]
name = "derisk-skills"
version = "0.1.0"
description = "CLI tool for managing OpenDeRisk Skills"
readme = "README.md"
authors = [{name = "csunny", email = "csunny@gmail.com"}]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
testpypi = { url = "https://test.pypi.org/simple/" }

[tool.hatch.build.targets.wheel]
packages = ["src/derisk_skills"]

[project.scripts]
derisk-cli = "derisk_skills.cli.main:main"
